--- a/public_html/views/_menu.ejs
+++ b/public_html/views/_menu.ejs
@@ -29,15 +29,13 @@
                                    <a href="/logout"><span class="glyphicon glyphicon-off"></span>로그아웃</a><% } %>
                               </li>
                          </ul>
-                         <form class="search-form navbar-form navbar-right">
+                         <!--form class="search-form navbar-form navbar-right">
                               <div class="form-group has-feedback">
                                    <input type="text" id="search" name="search" class="form-control" aria-describedby="inputSearchStatus" placeholder="검색어를 입력하세요">
                                    <span class="glyphicon glyphicon-search form-control-feedback" aria-hidden="true"></span>
                                    <span id="inputSearchStatus" class="sr-only">(검색)</span>
                               </div>
-                              <!--input type="text" id="search" name="search" class="form-control" placeholder="검색어를 입력하세요">
-                              <input type="submit" class="form-control" value="검색"-->
-                         </form>
+                         </form-->
                          <div class="rtkeyword-form navbar-right ">
                               <ul class="rtkeyword">
                               </ul>
