--- a/public_html/views/about.ejs
+++ b/public_html/views/about.ejs
@@ -21,18 +21,31 @@
      <body>
 <% include _menu %>
           <div class="container">
-               <div class="row">
+               <div class="row about-list">
                     <div class="col-sm-12">
-                         <div class="well">
-                              <h1>- About -</h1>
-                              <h3>Music for relaxing</h3>
-                              <p>소개에 대한 글</p>
+                         <h2 class="about-head">음악의 대명사 소개</h2>
+                         <div class="about-content1 text-center">
+                              <h3><b>음악의 대명사 소개</b></h3>
+                              <p>
+                                   저희 음악의 대명사 사이트는 <b>바쁘게 살아가고 있는 현대인들을 위한 쉼터</b>로서 음악을 통하여 삶의 이유를 느낄 수 있습니다.<br>
+                                   또한 관심있는 악기 분야에 대한 정보를 서로 공유하고 배워갈 수 있는 <b>멘토 게시판</b>과 멋진 연주 영상을 공유하여<br>
+                                   볼 수 있는 <b>연주 게시판</b> 그리고 연주할 때 가장 중요한 <b>악보 게시판</b>이 있습니다.
+                              </p>
                          </div>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac ex nec sem imperdiet viverra at consequat ipsum. Aenean id magna sit amet nisl rutrum sagittis a non arcu. Nullam at imperdiet est, non convallis nulla. Morbi iaculis felis turpis, eget viverra ante imperdiet in. Integer quis risus libero. Mauris scelerisque felis quis felis pretium sodales. Etiam libero neque, venenatis et diam nec, vehicula consectetur lectus. Aliquam justo mi, volutpat id porta non, tempor sit amet lacus. Sed blandit ut justo non eleifend. Sed a dui eleifend eros eleifend cursus in ut nulla. Mauris sed nisi lobortis, accumsan mauris sit amet, iaculis massa. Cras eget velit a turpis tristique congue nec non ipsum.</p>
-                         <p>Aliquam semper ultricies massa, vestibulum aliquam magna sollicitudin a. Quisque aliquet in enim sed ultrices. Curabitur nisi nibh, vehicula in porta ac, pharetra ut massa. Duis quis purus quis mauris iaculis auctor ac in nisi. Donec iaculis scelerisque orci sed consectetur. Aliquam fermentum eros eu lectus lobortis, sed volutpat sem venenatis. Integer id arcu libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                         <p>Curabitur elementum lorem ultrices dolor elementum, sit amet lacinia nisi consequat. Morbi vel tellus eu eros mattis iaculis. Aenean eu nulla fringilla, commodo felis non, fermentum mi. Vivamus gravida tellus tincidunt neque semper, eget dapibus ipsum pellentesque. Mauris nec mauris vel urna ultrices tristique. Ut a turpis aliquam, ultricies dolor sit amet, congue odio. Nam lacinia elit mi, et dignissim risus ullamcorper vitae. Sed hendrerit placerat accumsan. Fusce faucibus ac enim ultrices eleifend. Curabitur vestibulum et urna eu consequat.</p>
-                         <p>Phasellus lorem tortor, mollis at tellus non, cursus tristique massa. Quisque ligula lectus, vehicula at hendrerit quis, venenatis eget velit. Quisque cursus volutpat justo non fermentum. Curabitur commodo odio ut nunc tempor ultrices. Cras vitae velit aliquet, porta magna sed, facilisis risus. Suspendisse vitae molestie arcu. Nunc facilisis vel urna vel elementum. Vivamus vitae blandit enim, at iaculis nulla. Sed vel neque non mauris dictum feugiat. Morbi in ligula mollis, feugiat felis quis, consequat lectus. Fusce faucibus tempus mattis. Donec sed ligula at turpis vehicula porttitor. Curabitur odio nulla, blandit nec leo vitae, auctor finibus dolor. In maximus nisi vitae elit lacinia, eget iaculis ligula sollicitudin. In mauris nulla, commodo bibendum quam ut, iaculis sollicitudin nisi. Cras orci enim, scelerisque id felis eu, rutrum ornare magna.</p>
-                         <p>Morbi consectetur hendrerit ante. Donec luctus turpis vitae mauris mattis, sit amet finibus ligula dapibus. Maecenas commodo ultrices felis at fringilla. Vestibulum venenatis quam hendrerit, varius est ut, tristique tellus. Donec dictum diam nec metus scelerisque, convallis vulputate lectus ullamcorper. Maecenas tempus, tortor rhoncus blandit sagittis, lacus ligula euismod lorem, eu rutrum risus orci vel nunc. Duis blandit arcu dui, non rhoncus massa finibus ut. Vestibulum laoreet tristique lectus, in lobortis elit finibus eget. Nulla facilisi.</p>
+                         <div class="row about-content2">
+                              <div class="col-sm-6 text-center">
+                                   <img src="img/about_girl.jpg" class="img-thumbnail" alt="음악 감상">
+                              </div>
+                              <div class="col-sm-6">
+                                   <h4>음악의 효과</h4>
+                                   <ol>
+                                        <li>기분을 좋게 만든다.</li>
+                                        <li>집중력을 향상시킨다.</li>
+                                        <li>심리적 안정을 얻을 수 있다.</li>
+                                        <li>두통같은 통증을 줄여준다.</li>
+                                   </ol>
+                              </div>
+                         </div>
                     </div>
                </div>
           </div>
