--- a/public_html/views/mypage.ejs
+++ b/public_html/views/mypage.ejs
@@ -35,8 +35,9 @@
                               <li class=""><a href="/index">홈</a></li>
                               <li class=""><a href="/about">소개</a></li>
                               <li class="dropdown">
-                                   <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">커뮤니티<span class="caret"></span></a>
+                                   <a href="community" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">커뮤니티 <span class="caret"></span></a>
                                    <ul class="dropdown-menu">
+                                        <li class=""><a href="/board/notice">공지사항</a></li>
                                         <li class=""><a href="/board/play">연주 게시판</a></li>
                                         <li class=""><a href="/board/mentor">멘토 게시판</a></li>
                                         <li class=""><a href="/board/sheet">악보 게시판</a></li>
@@ -52,8 +53,14 @@
                                    <a href="/logout"><span class="glyphicon glyphicon-off"></span>로그아웃</a><% } %>
                               </li>
                          </ul>
-                         <form class="navbar-form navbar-right">
-                              <input type="text" name="form-control" placeholder="검색...">
+                         <form class="search-form navbar-form navbar-right">
+                              <div class="form-group has-feedback">
+                                   <input type="text" id="search" name="search" class="form-control" aria-describedby="inputSearchStatus" placeholder="검색어를 입력하세요">
+                                   <span class="glyphicon glyphicon-search form-control-feedback" aria-hidden="true"></span>
+                                   <span id="inputSearchStatus" class="sr-only">(검색)</span>
+                              </div>
+                              <!--input type="text" id="search" name="search" class="form-control" placeholder="검색어를 입력하세요">
+                              <input type="submit" class="form-control" value="검색"-->
                          </form>
                     </div>
                </div>
@@ -92,6 +99,9 @@
                          </div>
                          <div class="setting">
                               <form class="well">
+                                   <h3>회원 탈퇴</h3>
+                                   <p>정말로 나가시겠습니까?</p>
+                                   <button type="button" class="btn btn-danger" name="button">탈퇴</button>
                               </form>
                          </div>
                     </div>
